[tool.poetry]
name = "qmps-syc-fork"
version = "0.1.0"
description = ""
authors = ["Vinul W <vinul25@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
