[tool.poetry]
name = "qmps-syc-fork"
version = "0.1.0"
description = ""
authors = ["Vinul W <vinul25@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
notebook = "^7.2.1"
scipy = "^1.14.0"
numpy = "^1.9"
cirq = "^1.4.1"
ncon = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
